--- a/lang/en.json
+++ b/lang/en.json
@@ -1,17 +1,17 @@
 {
   "mre-dnd5e": {
     "SETTINGS": {
-      "GlobalDefault": "Global Default",
+      "GlobalDefault": "World Default",
       "GlobalHint": "This setting sets the default setting for all players.",
       "LocalOverride": "Local Override",
-      "LocalHint": "This setting overrides the server default for this client only.",
+      "LocalHint": "This setting overrides the world default for this client only.",
       "AdvModifierLabel": "Advantage Modifier",
       "AdvModifierHint": "When holding this modifier key, MRE will roll with advantage.",
       "DisAdvModifierLabel": "Disadvantage Modifier",
       "DisAdvModifierHint": "When holding this modifier key, MRE will roll with disadvantage.",
       "ShowRollDialogLabel": "Show Roll Dialog Modifier",
       "ShowRollDialogHint": "When holding this modifier key, MRE will show the roll dialog, rather than skipping it.",
-      "default": "Use Server Default",
+      "default": "Use World Default",
       "altKey": "Alt/Option",
       "ctrlKey": "Control/Command",
       "shiftKey": "Shift"
