Remove extra logging, localize raw "Empty" string

--- a/lang/en.json
+++ b/lang/en.json
@@ -28,6 +28,7 @@
       "Primary": "Primary",
       "Secondary": "Secondary",
       "Tertiary":  "Tertiary",
+      "Empty": "Empty",
       "NewDamageGroup": "New Damage Group",
       "SaveAndClose": "Save & Close",
       "AddDamageGroup": "Add a New Damage Group",
