Implement auto roll override buttons in item sheet.
As of now, these buttons do set flags on the item, but do not alter roll functionality

--- a/lang/en.json
+++ b/lang/en.json
@@ -35,6 +35,14 @@
       "DeleteDamageGroup": "Delete This Damage Group",
       "RenameDamageGroup": "Rename Damage Group",
       "GroupEmptyError": "Damage Group \"{label}\" is empty."
+    },
+    "AUTO-ROLL": {
+      "AutoRoll": "Auto Roll",
+      "OverrideFalse": "Force Auto Roll OFF for this item",
+      "OverrideTrue": "Force Auto Roll ON for this item",
+      "Default": "Use the default Auto Roll setting",
+      "False": "Auto Roll OFF for this item",
+      "True": "Auto Roll ON for this item"
     }
   }
 }
