Add support for macos command key as a separate option from the control key

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,7 +18,8 @@
     },
     "MODIFIERS": {
       "altKey": "Alt/Option",
-      "ctrlKey": "Control/Command",
+      "ctrlKey": "Control",
+      "metaKey": "Command",
       "default": "Use World Default",
       "shiftKey": "Shift"
     },
