--- a/lang/en.json
+++ b/lang/en.json
@@ -9,18 +9,18 @@
       "GlobalHint": "This setting sets the default setting for all players.",
       "LocalOverride": "Local Override",
       "LocalHint": "This setting overrides the world default for this client only.",
-      "ModifierAdvLabel": "Advantage Modifier",
-      "ModifierAdvHint": "When holding this modifier key, MRE will roll with advantage.",
+      "ModifierAdvLabel": "Advantage/Critical Modifier",
+      "ModifierAdvHint": "When holding this modifier key, MRE will roll a check or attack with advantage, or roll damage as critical damage.",
       "ModifierDisAdvLabel": "Disadvantage Modifier",
       "ModifierDisAdvHint": "When holding this modifier key, MRE will roll with disadvantage.",
       "ModifierShowRollDialogLabel": "Show Roll Dialog Modifier",
       "ModifierShowRollDialogHint": "When holding this modifier key, MRE will show the roll dialog, rather than skipping it."
     },
     "MODIFIERS": {
+      "default": "Use World Default",
       "altKey": "Alt/Option",
       "ctrlKey": "Control",
       "metaKey": "Command",
-      "default": "Use World Default",
       "shiftKey": "Shift"
     },
     "FORMULA-GROUP": {
