--- a/lang/en.json
+++ b/lang/en.json
@@ -5,6 +5,8 @@
       "AutoRollChecksHint": "Automatically roll the attack roll or tool check for the item if it exists.",
       "AutoRollDamageLabel": "Automatically Roll Item Damage",
       "AutoRollDamageHint": "Automatically roll the first formula group for the item if it exists.",
+      "ShowDamageTotalLabel": "Show Total Damage",
+      "ShowDamageTotalHint": "Whether or not to show the total result of all individual rolls in a combined damage card.",
       "GlobalDefault": "World Default",
       "GlobalHint": "This setting sets the default setting for all players.",
       "LocalOverride": "Local Override",
@@ -44,6 +46,9 @@
       "Default": "Use the default Auto Roll setting",
       "False": "Auto Roll OFF for this item",
       "True": "Auto Roll ON for this item"
+    },
+    "OTHER": {
+      "TotalDamage": "Total"
     }
   }
 }
