Add global/local setting to select whether the core dnd5e roll dialogs should be skipped or shown by default
Resolves #14

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,12 +11,16 @@
       "GlobalHint": "This setting sets the default setting for all players.",
       "LocalOverride": "Local Override",
       "LocalHint": "This setting overrides the world default for this client only.",
-      "ModifierAdvLabel": "Advantage/Critical Modifier",
+      "ModifierAdvLabel": "ADV/Crit Modifier Key",
       "ModifierAdvHint": "When holding this modifier key, MRE will roll a check or attack with advantage, or roll damage as critical damage.",
-      "ModifierDisAdvLabel": "Disadvantage Modifier",
+      "ModifierDisAdvLabel": "DISADV Modifier Key",
       "ModifierDisAdvHint": "When holding this modifier key, MRE will roll with disadvantage.",
-      "ModifierShowRollDialogLabel": "Show Roll Dialog Modifier",
-      "ModifierShowRollDialogHint": "When holding this modifier key, MRE will show the roll dialog, rather than skipping it."
+      "ModifierShowRollDialogLabel": "Roll Dialog Modifier Key",
+      "ModifierShowRollDialogHint": "When holding this modifier key, MRE will show the roll dialog, rather than skipping it.",
+      "RollDialogBehaviorLabel": "Default Roll Dialog Behavior",
+      "RollDialogBehaviorHint": "Choose whether to show or skip the core dnd5e roll dialog when no modifier keys are held.",
+      "Skip": "Skip",
+      "Show": "Show"
     },
     "MODIFIERS": {
       "default": "Use World Default",
